fix(readers): add chapter caching and improve page rendering (#514)
* fix(readers): add chapter caching and improve page rendering

* fix(readers): simplify caching logic and remove unused methods in CbxReaderService and PdfReaderService
# Conflicts:
#	booklore-api/src/main/java/org/booklore/controller/EpubReaderController.java