@@ -19,10 +19,10 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.github.benmanes.caffeine.cache.Cache;
@@ -35,23 +35,50 @@ public class PdfReaderService {
 
     private static final int MAX_CACHE_ENTRIES = 15;
     private static final float DEFAULT_DPI = 200f;
+    private static final long MTIME_TOLERANCE_MS = 2000;
 
     private final BookRepository bookRepository;
+    private final ChapterCacheService chapterCacheService;
     private final Cache<String, CachedPdfMetadata> metadataCache = Caffeine.newBuilder()
             .maximumSize(MAX_CACHE_ENTRIES)
             .expireAfterAccess(Duration.ofMinutes(30))
             .build();
 
-    private static class CachedPdfMetadata {
-        final int pageCount;
-        final long lastModified;
-        final List<PdfOutlineItem> outline;
+    private record CachedPdfMetadata(int pageCount, long lastModified, List<PdfOutlineItem> outline) {}
 
-        CachedPdfMetadata(int pageCount, long lastModified, List<PdfOutlineItem> outline) {
-            this.pageCount = pageCount;
-            this.lastModified = lastModified;
-            this.outline = outline;
+    public void initCache(Long bookId, String bookType) throws IOException {
+        Path pdfPath = getBookPath(bookId, bookType);
+        CachedPdfMetadata metadata = getCachedMetadata(pdfPath);
+        String cacheKey = getCacheKey(bookId, bookType, metadata.lastModified);
+
+        Path cacheDir = chapterCacheService.getCachedPage(cacheKey, 1).getParent();
+        if (!Files.exists(cacheDir)) {
+            Files.createDirectories(cacheDir);
         }
+
+        long cacheMtime = Files.getLastModifiedTime(cacheDir).toMillis();
+        boolean cacheEmpty;
+        try (var stream = Files.list(cacheDir)) {
+            cacheEmpty = stream.findAny().isEmpty();
+        }
+
+        if (!cacheEmpty && Math.abs(cacheMtime - metadata.lastModified) <= MTIME_TOLERANCE_MS) {
+            return;
+        }
+
+        log.info("Populating PDF disk cache for {}: {} pages", cacheKey, metadata.pageCount);
+        // PdfDocument is not thread-safe — render pages serially then cache
+        try (PdfDocument doc = PdfDocument.open(pdfPath)) {
+            for (int i = 1; i <= metadata.pageCount; i++) {
+                Path target = chapterCacheService.getCachedPage(cacheKey, i);
+                if (!Files.exists(target) || Files.size(target) == 0) {
+                    byte[] jpeg = doc.renderPageToBytes(i - 1, (int) DEFAULT_DPI, "jpeg");
+                    writeAtomically(target, jpeg);
+                }
+            }
+        }
+
+        Files.setLastModifiedTime(cacheDir, Files.getLastModifiedTime(pdfPath));
     }
 
     public void getAvailablePages(Long bookId) {
@@ -64,7 +91,7 @@ public class PdfReaderService {
             CachedPdfMetadata metadata = getCachedMetadata(pdfPath);
             return IntStream.rangeClosed(1, metadata.pageCount)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             log.error("Failed to read PDF for book {}", bookId, e);
             throw ApiError.FILE_READ_ERROR.createException("Failed to read PDF: " + e.getMessage());
@@ -92,15 +119,39 @@ public class PdfReaderService {
     public void streamPageImage(Long bookId, String bookType, int page, OutputStream outputStream) throws IOException {
         Path pdfPath = getBookPath(bookId, bookType);
         CachedPdfMetadata metadata = getCachedMetadata(pdfPath);
+        String cacheKey = getCacheKey(bookId, bookType, metadata.lastModified);
+
+        if (chapterCacheService.hasPage(cacheKey, page)) {
+            Files.copy(chapterCacheService.getCachedPage(cacheKey, page), outputStream);
+            return;
+        }
+
         validatePageRequest(bookId, page, metadata.pageCount);
-        renderPageToStream(pdfPath, page, outputStream);
+
+        // Render, cache atomically, then stream
+        Path cached = chapterCacheService.getCachedPage(cacheKey, page);
+        Files.createDirectories(cached.getParent());
+        byte[] jpeg = renderPageToBytes(pdfPath, page);
+        writeAtomically(cached, jpeg);
+        outputStream.write(jpeg);
+    }
+
+    private String getCacheKey(Long bookId, String bookType, long lastModified) {
+        if (bookType != null) {
+            // Ensure we use the safe enum name to prevent path traversal
+            BookFileType type = BookFileType.fromName(bookType)
+                    .orElseThrow(() -> ApiError.INVALID_INPUT.createException("Invalid book type: " + bookType));
+            return bookId + "_" + type.name() + "_" + lastModified;
+        }
+        return bookId + "_" + lastModified;
     }
 
     private Path getBookPath(Long bookId, String bookType) {
         BookEntity bookEntity = bookRepository.findByIdWithBookFiles(bookId)
                 .orElseThrow(() -> ApiError.BOOK_NOT_FOUND.createException(bookId));
         if (bookType != null) {
-            BookFileType requestedType = BookFileType.valueOf(bookType.toUpperCase());
+            BookFileType requestedType = BookFileType.fromName(bookType)
+                    .orElseThrow(() -> ApiError.INVALID_INPUT.createException("Invalid book type: " + bookType));
             BookFileEntity bookFile = bookEntity.getBookFiles().stream()
                     .filter(bf -> bf.getBookType() == requestedType)
                     .findFirst()
@@ -190,14 +241,27 @@ public class PdfReaderService {
         }
     }
 
-    private void renderPageToStream(Path pdfPath, int page, OutputStream outputStream) throws IOException {
+    private byte[] renderPageToBytes(Path pdfPath, int page) throws IOException {
         try (PdfDocument doc = PdfDocument.open(pdfPath)) {
             // page is 1-based from the API, renderPageToBytes expects 0-based
-            byte[] jpeg = doc.renderPageToBytes(page - 1, (int) DEFAULT_DPI, "jpeg");
-            outputStream.write(jpeg);
-        } catch (IOException e) {
+            return doc.renderPageToBytes(page - 1, (int) DEFAULT_DPI, "jpeg");
+        } catch (Exception e) {
             log.error("Failed to render PDF page {} from {}", page, pdfPath, e);
-            throw e;
+            throw new IOException(e);
+        }
+    }
+
+    /**
+     * Writes bytes to a temp file then atomically moves to the target path.
+     * If the write fails the partial temp file is cleaned up.
+     */
+    private void writeAtomically(Path target, byte[] data) throws IOException {
+        Path tmp = Files.createTempFile(target.getParent(), target.getFileName().toString() + ".", ".tmp");
+        try {
+            Files.write(tmp, data);
+            Files.move(tmp, target, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
+        } finally {
+            Files.deleteIfExists(tmp);
         }
     }
 }
